2009-11-13: 1.21.4: 
Fixed a dimension problem in collect() for MS2

2009-11-13: 1.21.3: 
added a check for (un)grouped xcmsSet to groupval() 
findmzROI shows scan number in case of errors

2009-11-08: 1.21.2: 
R/xcmsSet.R: added peakTable()

2009-10-28: 1.21.1: 
added a check for grouped xcmsSet with NA values (i.e. without fillPeaks()) to diffreport() 

2009-10-11: 1.18.4
group.nearest: fixed/added calculation of peaks-per-sampclass, 
               resolving problem in retcor() reported by Daniel Maturana

2009-07-17: 1.18.2
fixed calculation of specNoise() for 1-point spectra in xcmsRaw.R

2009-07-17: 1.18.1
findPeaks.centWave: fixed missing mzCenter.* assignment, when fitgauss=T is used

2009-08-04: 1.18.0
fillPeaks/getPeaks: fixed bug introduced with 1.17.9's bugfix, that filled in zero intensities

2009-07-17: 1.17.9
findPeaks.centWave: narrow down peak rt boundaries by skipping zeros
fillPeaks/getPeaks: fixed problem with nonexisting retention times due to retcor(), 
                    fill in zero instead of NaN (which breaks diffreport), but print a warning

2009-06-22: 1.17.8
findPeaks.centWave: Optimizations for OrbitTrap/FTICR data, different functions can be used for calculating 
                    the m/z center of the feature: mzCenter.{mean,wMean,apex,wMeanApex3,meanApex3}
		    Fixed: maximum intensity (maxo) was incorrect for some features  
OBSOLETED xcmsRaw@msnPeakCount, it was not set, not used and can be calculated from msnScanIndex

2009-05-28: 1.17.7
Fixing a couple coding/documentation bugs in plotTIC

2009-05-28: 1.17.6
Some arguments renaming for retcor(method="obiwarp")

2009-05-07: 1.17.5
Fix getEIC() for xcmsRaw 

2009-05-07: 1.17.4

2009-05-07: 1.17.3
Fixed warnings in Obiwarp with cor_opt

2009-04-23: 1.17.2
Reverted Mac Multiarch builds after BioC buildfarm changes
Fixes in Obiwarp alignment

2009-04-21: 1.17.1
Fixed return value of group(method="nearest")
to be a proper (grouped) xcmsSet

2009-04-20: 1.17.0